--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -2,83 +2,118 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    xmlns:libIZO="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FF6F00"
     tools:context=".SignupActivity">
 
-    <TextView
-        android:id="@+id/signup_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="Sign up"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/signupProfile_iv"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:alpha="1"
+        app:layout_constraintBottom_toBottomOf="@+id/camera_ibtn"
+        app:layout_constraintEnd_toEndOf="@+id/camera_ibtn"
+        app:layout_constraintStart_toStartOf="@+id/camera_ibtn"
+        app:layout_constraintTop_toTopOf="@+id/camera_ibtn" />
+
+    <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/camera_ibtn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_camera"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="85dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/roboto_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup_tv" />
+        app:layout_constraintTop_toTopOf="parent"
+        fancy:fb_radius="110dp"
+        fancy:fb_text="Take a photo"
+        fancy:fb_textSize="20sp"
+        fancy:fb_textColor="#FF6F00"
+        fancy:fb_textFont="@font/roboto_medium" />
 
-    <EditText
+    <com.libizo.CustomEditText
         android:id="@+id/username_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
+        android:fontFamily="@font/roboto"
         android:hint="Username"
         android:inputType="text"
+        android:paddingTop="12dp"
+        android:paddingLeft="10dp"
+        android:textColor="#FF6F00"
+        android:textColorHint="#ffa040"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/camera_ibtn" />
+        app:layout_constraintTop_toBottomOf="@+id/camera_ibtn"
+        app:libIZO_setBackgroundColor="@color/white"
+        app:libIZO_setBorderView="true"
+        app:libIZO_setCornerRadius="5dp" />
 
-    <EditText
+    <com.libizo.CustomEditText
         android:id="@+id/email_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
+        android:fontFamily="@font/roboto"
+        android:paddingTop="12dp"
+        android:paddingLeft="10dp"        android:textColor="#FF6F00"
+        android:textColorHint="#ffa040"
+        android:textSize="18sp"
+        app:libIZO_setBackgroundColor="@color/white"
+        app:libIZO_setBorderView="true"
+        app:libIZO_setCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_et" />
 
-    <EditText
+    <com.libizo.CustomEditText
         android:id="@+id/password_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:fontFamily="@font/roboto"
+        android:paddingTop="12dp"
+        android:paddingLeft="10dp"        android:textColor="#FF6F00"
+        android:textColorHint="#ffa040"
+        android:textSize="18sp"
+        app:libIZO_setBackgroundColor="@color/white"
+        app:libIZO_setBorderView="true"
+        app:libIZO_setCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_et" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/signup_btn"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="30dp"
+        android:textAllCaps="false"
         android:text="Sign up"
+        android:textSize="20sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password_et" />
@@ -87,11 +122,15 @@
         android:id="@+id/haveAccount_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/roboto"
         android:text="@string/have_account"
-        android:textSize="16sp"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_btn" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
