--- a/app/src/main/res/layout/chat_from_item.xml
+++ b/app/src/main/res/layout/chat_from_item.xml
@@ -9,23 +9,28 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/chat_from_img"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/googleg_standard_color_18" />
 
-    <TextView
+    <com.libRG.CustomTextView
         android:id="@+id/chat_from_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:background="@color/white"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto"
         android:maxWidth="250dp"
-        android:padding="10dp"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:lib_setShape="rectangle"
+        app:lib_setRoundedView="true"
+        app:lib_setRoundedBGColor="#FF6F00"
+        app:lib_setRadius="10dp"
         android:text="Message with text text text and text text text ahd text text text text text text text text"
-        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/chat_from_img"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
